--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
                     <select>
                         <option value=""></option>
                         <option value="blur">blur</option>
-                        <option value="sephia">sephia</option>
-                        <option value="saturate">saturate</option>
-                        <option value="invert">invert</option>
-                        <option value="grayscale">grayscale</option>
                         <option value="contrast">contrast</option>
+                        <option value="saturate">saturate</option>
+
+                        <!-- Don't know why, but I can't get these ones to work -->
+                        <!-- <option value="sephia">sephia</option> -->
+                        <!-- <option value="invert">invert</option> -->
+                        <!-- <option value="grayscale">grayscale</option> -->
                     </select>
                     <input type="text" placeholder="level"><span>%</span>
                 </div>
